--- a/index.html
+++ b/index.html
@@ -7,6 +7,39 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <div class="wrapper">
+        <header>
+            <div class="logo-box">
+                <img class="logo" src="assets/images/Logo.svg" alt="logo">
+            </div>
+            <ul class="nav-menu">
+                <li>Home</li>
+                <li class="current"><a href="index.html">About</a></li>
+                <li>Contact</li>
+            </ul>
+        </header>
+        <section>
+            <div class="about-title">
+                <h1><span class="orangered">About</span> <span class="dark-orange">Me</span></h1>
+            </div>
+            <div class="about-content-wrapper">
+                <div class="image-box"><img src="" alt="about-me_photo"></div>
+                <div class="about-text">
+                    <div class="text">
+                        <p>
+                            Hi, I'm <br><span>Samuel Nshumbushijwenayo</span><br> I am an entusiastic JavaScript Software Engineer.<br>
+                            <span>The following are the technologies used:</span>
+                        </p>
+
+                    </div>
+                </div>
+            </div>
+        </section>
+        <footer>
+            <div class="copy-right">
+                <p>Sam Web Design, Copy-right &copy;2020</p>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
