ft: Modified index.html and style.css

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <div class="wrapper">
         <header>
             <div class="logo-box">
-                <img class="logo" src="assets/images/Logo.svg" alt="logo">
+                <a href="index.html"><img class="logo" src="assets/images/Logo.svg" alt="logo"></a>
             </div>
             <ul class="nav-menu">
                 <li class="current"><a href="index.html">Home</a></li>
-                <li>About</li>
-                <li>Contact</li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </header>
         <section class="content-wrapper">
