ft: Added Signup Page and modified style.css

--- a/signup.html
+++ b/signup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
+    <title>Signup Page</title>
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -23,32 +23,40 @@
         <section>
             <div class="content-wrapper">
                 <div class="content-title">
-                    <h2><span class="orangered">Login</span> <span class="dark-orange"></span></h2>
+                    <h2><span class="orangered">Signup</span> <span class="dark-orange"></span></h2>
                 </div>
-                <div class="login-content">
-                    <div class="login-holder">
-                        <div class="login-text">
-                            <p>Login <br>To <br> Build <br> Your <br> <span class="orangered">Blog Posts</span></p>
+                <div class="signup-content">
+                    <div class="signup-holder">
+                        <div class="signup-text">
+                            <p>Signup <br>To <br> Build <br> Your <br> <span class="orangered">Blog Posts</span></p>
                         </div>
-                        <div class="login-form">
+                        <div class="signup-form">
                             <form action="">
                                 <div>
-                                    <label for="email">Email</label><br>
-                                    <input id="login-email" type="text" name="email"><br>
+                                    <label for="username">Username:</label><br>
+                                    <input id="signup-username" type="text" name="username"><br>
                                 </div>
                                 <div>
-                                    <label for="name">Password</label><br>
-                                    <input id="login-name" type="password" name="name"><br>
+                                    <label for="email">Email:</label><br>
+                                    <input id="signup-email" type="text" name="email"><br>
                                 </div>
                                 <div>
-                                    <input id="btn" type="submit" value="Login"></form>
+                                    <label for="name">Password:</label><br>
+                                    <input id="signup-name" type="password" name="name"><br>
+                                </div>
+                                <div>
+                                    <label for="name">Confirm Password:</label><br>
+                                    <input id="signup-conform" type="password" name="confirm-password"><br>
+                                </div>
+                                <div>
+                                    <input id="btn" type="submit" value="Signup"></form>
                                 </div>
                         </div>
                         </div>
                     </div>
                 </div>
                 <div class="login-signup-message">
-                    <p>Please <span><a href="signup.html">signup</a></span> if you don't have an account</p>
+                    <p>Please <span><a href="login.html">login</a></span> if you have an account</p>
                 </div>
         </section>
         <footer>
