--- a/blogs.html
+++ b/blogs.html
@@ -57,7 +57,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="login-message">
+                <div class="login-signup-message">
                     <p>Please <span><a href="login.html">login</a></span> to your account</p>
                 </div>
         </section>
