--- a/contact.html
+++ b/contact.html
@@ -51,11 +51,14 @@
                     </div>
                 </div>
             </div>
+            <div class="login-signup-message">
+                <p>Please <span><a href="login.html">login</a></span> if you have an account</p>
+            </div>
         </section>
         <footer>
-            <div class="copy-right">
+            <!-- <div class="copy-right">
                 <p>Sam Web Design, Copy-right &copy;2020</p>
-            </div>
+            </div> -->
         </footer>
     </div>
 </body>
