Added footer to contact.html

--- a/contact.html
+++ b/contact.html
@@ -56,9 +56,9 @@
             </div>
         </section>
         <footer>
-            <!-- <div class="copy-right">
+            <div class="copy-right">
                 <p>Sam Web Design, Copy-right &copy;2020</p>
-            </div> -->
+            </div>
         </footer>
     </div>
 </body>
