ft: Modified Header for Responsiveness

--- a/blogs.html
+++ b/blogs.html
@@ -13,12 +13,24 @@
             <div class="logo-box">
                 <a href="index.html"><img class="logo" src="assets/images/Logo.svg" alt="logo"></a>
             </div>
-            <ul class="nav-menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li class="current"><a href="blogs.html">Blogs</a></li>
-            </ul>
+            <div class="nav-menu">
+                <input type="checkbox" class="toggler">
+                <div class="hamburger">
+                    <div></div>
+                </div>
+                <div class="menu">
+                    <div>
+                        <div>
+                            <ul>
+                                <li class="current"><a href="index.html">Home</a></li>
+                                <li><a href="about.html">About</a></li>
+                                <li><a href="contact.html">Contact</a></li>
+                                <li><a href="blogs.html">Blogs</a></li>         
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </header>
         <section>
             <div class="content-wrapper">
