--- a/index.html
+++ b/index.html
@@ -14,22 +14,13 @@
                 <a href="index.html"><img class="logo" src="assets/images/Logo.svg" alt="logo"></a>
             </div>
             <div class="nav-menu">
-                <input type="checkbox" class="toggler">
-                <div class="hamburger">
-                    <div></div>
-                </div>
-                <div class="menu">
-                    <div>
-                        <div>
-                            <ul>
-                                <li class="current"><a href="index.html">Home</a></li>
-                                <li><a href="about.html">About</a></li>
-                                <li><a href="contact.html">Contact</a></li>
-                                <li><a href="blogs.html">Blogs</a></li>         
-                            </ul>
-                        </div>
-                    </div>
-                </div>
+                <ul>
+                    <li class="current"><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="blogs.html">Blogs</a></li>         
+                    <!-- <li><a href="login.html">Account</a></li>          -->
+                </ul>
             </div>
         </header>
         <section>
