ft: Updated responsiveness for Contact Page

--- a/contact.html
+++ b/contact.html
@@ -15,11 +15,11 @@
             </div>
             <div class="nav-menu">
                 <ul>
-                                <li><a href="index.html">Home</a></li>
-                                <li><a href="about.html">About</a></li>
-                                <li class="current"><a href="contact.html">Contact</a></li>
-                                <li><a href="blogs.html">Blogs</a></li>         
-                                <!-- <li><a href="login.html">Account</a></li>          -->
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li class="current"><a href="contact.html">Contact</a></li>
+                    <li><a href="blogs.html">Blogs</a></li>         
+                    <!-- <li><a href="login.html">Account</a></li>          -->
                 </ul>
             </div>
         </header>
@@ -31,20 +31,20 @@
                 <div class="contact-content">
                     <div class="contact-holder">
                         <div class="contact-text">
-                            <p>Send <br>Your <br> Thoughts <br> To <br> <span class="orangered">Blog Posts</span></p>
+                            <p>Send Your Thoughts To <span class="orangered">Blog Posts</span></p>
                         </div>
                         <div class="contact-form">
                             <form action="">
                                 <div>
-                                    <label for="name">Name</label><br>
+                                    <label for="name">Name:</label><br>
                                     <input id="contact-name" type="text" name="name"><br>
                                 </div>
                                 <div>
-                                    <label for="email">Email</label><br>
+                                    <label for="email">Email:</label><br>
                                     <input id="contact-email" type="text" name="email"><br>
                                 </div>
                                 <div>
-                                    <label for="message">Message</label><br>
+                                    <label for="message">Message:</label><br>
                                     <textarea id="contact-message" name="message" cols="20" rows="4"></textarea><br><br>
                                 </div>
                                 <div>
