--- a/blogs.html
+++ b/blogs.html
@@ -15,22 +15,21 @@
             </div>
             <div class="nav-menu">
                 <ul>
-                                <li><a href="index.html">Home</a></li>
-                                <li><a href="about.html">About</a></li>
-                                <li><a href="contact.html">Contact</a></li>
-                                <li class="current"><a href="blogs.html">Blogs</a></li>         
-                                <!-- <li><a href="login.html">Account</a></li>          -->
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li class="current"><a href="blogs.html">Blogs</a></li>         
+                    <!-- <li><a href="login.html">Account</a></li>         -->
                 </ul>
             </div>
         </header>
         <section>
-            <div class="content-wrapper">
-                <div class="content-title">
-                    <h2><span class="orangered">My</span> <span class="dark-orange">Blogs</span></h2>
-                </div>
-                <div class="blogs-content">
-                    <div class="blogs-holder">
-                        <div class="blogs-row1">
+            <div class="content-title">
+                <h2><span class="orangered">My</span> <span class="dark-orange">Blogs</span></h2>
+            </div>
+            <div class="blogs-content">
+                <div class="blogs-holder">
+                    <div class="blogs-row">
                             <div class="blog">
                                 <img class="blog-img" src="assets/images/blog1.svg" alt="blog1">
                                 <p>Rwanda Military Stories</p>
@@ -43,8 +42,6 @@
                                 <img class="blog-img" src="assets/images/blog3.svg" alt="blog3">
                                 <p>Softaware Development</p>
                             </div>
-                        </div>
-                        <div class="blogs-row2">
                             <div class="blog">
                                 <img class="blog-img" src="assets/images/blog4.svg" alt="blog4">
                                 <p>Mechanic Tools</p>
@@ -57,12 +54,12 @@
                                 <img class="blog-img" src="assets/images/blog6.svg" alt="blog6">
                                 <p>Git Version Control</p>
                             </div>
-                        </div>
                     </div>
                 </div>
                 <div class="login-signup-message">
                     <p>Please <span><a href="login.html">login</a></span> to your account</p>
                 </div>
+            </div>
         </section>
         <footer>
             <div class="copy-right">
