ft: Added Admin feature and Updated responsiveness for login

--- a/login-admin.html
+++ b/login-admin.html
@@ -25,15 +25,15 @@
         </header>
         <section>
                 <div class="content-title">
-                    <h2><span class="orangered">User</span> <span class="dark-orange">Login</span></h2>
+                    <h2><span class="orangered">Admin</span> <span class="dark-orange">Login</span></h2>
                 </div>
                 <div class="login-content">
                     <div class="login-holder">
                         <div class="login-text">
-                            <p>Login <br>To <br> Build <br> Your <br> <span class="orangered">Blog Posts</span></p>
+                            <p>Login <br>As <br> Admin <br> To have <br> <span class="orangered">Privelleges</span></p>
                         </div>
                         <div class="login-form">
-                            <form action="">
+                            <form action="admin.html">
                                 <div>
                                     <label for="email">Email</label><br>
                                     <input id="login-email" type="text" name="email"><br>
@@ -46,7 +46,7 @@
                                     <input id="btn" type="submit" value="Login"></form>
                                 </div>
                                 <div class="login-admin-user">
-                                    <a href="login-admin.html">Login As Admin</a>
+                                    <a href="login.html">Login As User</a>
                                 </div>
                         </div>
                     </div>
