ft: Updated responsiveness

--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@
                 <div class="login-content">
                     <div class="login-holder">
                         <div class="login-text">
-                            <p>Login <br>To <br> Build <br> Your <br> <span class="orangered">Blog Posts</span></p>
+                            <p>Login To Build Your <span class="orangered">Blog Posts</span></p>
                         </div>
                         <div class="login-form">
                             <form action="">
@@ -43,8 +43,9 @@
                                     <input id="login-name" type="password" name="name"><br>
                                 </div>
                                 <div>
-                                    <input id="btn" type="submit" value="Login"></form>
+                                    <input id="btn" type="submit" value="Login">
                                 </div>
+                            </form>
                                 <div class="login-admin-user">
                                     <a href="login-admin.html">Login As Admin</a>
                                 </div>
