ft: Updated responsiveness

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Poppins&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="wrapper">
@@ -27,7 +27,7 @@
             <div class="content-wrapper">
                 <div class="index-content">
                     <div class="content">
-                        <div class="image"><img src="assets/images/myphoto.jpg" alt="myphoto"></div>
+                        <div class="image"><img src="assets/images/me-photo.jpg" style="border-radius: 10%;" alt="myphoto"></div>
                         <div class="text">
                             <h3>
                                 Hi, I'm <br>
@@ -50,6 +50,7 @@
         <footer>
             <div class="copy-right">
                 <p>Sam Web Design, Copy-right &copy;2020</p>
+                
             </div>
         </footer>
     </div>
