--- a/about.html
+++ b/about.html
@@ -15,11 +15,11 @@
             </div>
             <div class="nav-menu">
                 <ul>
-                                <li><a href="index.html">Home</a></li>
-                                <li class="current"><a href="about.html">About</a></li>
-                                <li><a href="contact.html">Contact</a></li>
-                                <li><a href="blogs.html">Blogs</a></li>         
-                                <!-- <li><a href="login.html">Account</a></li>          -->
+                    <li><a href="index.html">Home</a></li>
+                    <li class="current"><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="blogs.html">Blogs</a></li>         
+                    <!-- <li><a href="login.html">Account</a></li> -->
                 </ul>
             </div>
         </header>
@@ -33,25 +33,21 @@
                         <p>
                             I am a full-stack Software engneer and I am currently in Andela Tecnical Leadership Program in kigali, Rwanda
                             <span class="flag"><img src="assets/images/rwanda.svg" alt="rwandan_flag"></span><br>
-                           If you have any web development needs or you need <span class="more-infos"><a href="contact.html">more information</a></span>, feel free to contact or get to know me a little <br>better.<br>
-                           The following are the technologies used:
+                            If you have any web development needs or you need <span class="more-infos"><a href="contact.html">more information</a></span>, feel free to contact or get to know me a little better.<br>
+                            The following are the technologies used:
                         </p>
                     </div>
                     <div class="technologies">
-                            <ul class="techno-row1">
-                                <li><img src="assets/images/figma.svg" alt="Figma"></li>
-                                <li><img src="assets/images/html5.svg" alt="HTML5"></li>
-                                <li><img src="assets/images/css3.svg" alt="CSS3"></li>
-                                <li><img src="assets/images/mongodb.svg" alt="Mongodb"></li>
-                                <li><img src="assets/images/postman.svg" alt="Postman"></li>
-                            </ul>
-                            <div class="techno-row2">
-                                <li><img src="assets/images/trello.svg" alt="Trello"></li>
-                                <li><img src="assets/images/js.svg" alt="JavaScript"></li>
-                                <li><img src="assets/images/nodejs.svg" alt="Node.js"></li>
-                                <li><img src="assets/images/postgresql.svg" alt="postgresql"></li>
-                                <li><img src="assets/images/git.svg" alt="GitHub"></li>
-                            </div>
+                        <li><img class="fi" src="assets/images/figma.svg" alt="Figma"></li>
+                        <li><img src="assets/images/html5.svg" alt="HTML5"></li>
+                        <li><img src="assets/images/css3.svg" alt="CSS3"></li>
+                        <li><img src="assets/images/js.svg" alt="JavaScript"></li>
+                        <li><img class="mongo" src="assets/images/mongodb.svg" alt="Mongodb"></li>
+                        <li><img src="assets/images/trello.svg" alt="Trello"></li>
+                        <li><img src="assets/images/git.svg" alt="GitHub"></li>
+                        <li><img src="assets/images/postgresql.svg" alt="postgresql"></li>
+                        <li><img class="postman" src="assets/images/postman.svg" alt="Postman"></li>
+                        <li><img src="assets/images/nodejs.svg" alt="Node.js"></li>
                     </div>
                 </div>
             </div>
