--- a/admin1.html
+++ b/admin1.html
@@ -31,45 +31,35 @@
                     <div class="admin-menu">
                         <p>My Brand</p>
                         <ul>
-                            <li class="current-menu"><a href="#">Dashboard</a></li>
-                            <li><a href="admin1.html">Manage Users</a></li>
+                            <li><a href="admin.html">Dashboard</a></li>
+                            <li class="current-menu"><a href="#">Manage Users</a></li>
                             <li><a href="admin2.html">Create Blog</a></li>
                             <li><a href="#">Read Blogs</a></li>
                             <li><a href="#">Update Blogs</a></li>
                             <li><a href="#">Delete Blogs</a></li>
                         </ul>
                     </div>
-                    <div class="admin-holder">
-                            <div class="admin-box">
-                                <p>All Users</p>
-                                <img src="assets/images/Users.svg" alt="Users">
-                                <p>160</p>
-                            </div>
-                            <div class="admin-box">
-                                <p class="orangered">Active Users</p>
-                                <img src="assets/images/Users.svg" alt="Users">
-                                <p class="orangered">90</p>
-                            </div>
-                            <div class="admin-box">
-                                <p>Galleries</p>
-                                <img src="assets/images/gallery.svg" alt="Users">
-                                <p>4</p>
-                            </div>
-                            <div class="admin-box">
-                                <p>All Blog Posts</p>
-                                <img src="assets/images/Blogs.svg" alt="Blogs">
-                                <p>900</p>
-                            </div>
-                            <div class="admin-box">
-                                <p class="orangered">New Blog Posts</p>
-                                <img src="assets/images/Blogs.svg" alt="Blogs">
-                                <p class="orangered">65</p>
-                            </div>
-                            <div class="admin-box">
-                                <p class="orangered">New Comments</p>
-                                <img src="assets/images/Comments.svg" alt="Blogs">
-                                <p class="orangered">300</p>
-                            </div>
+                    <div class="admin1-holder">
+                        <table>
+                            <tr>
+                                <th class="td-no"></th> <th>NAME</th> <th class="td-email">EMAIL</th> <th colspan="2">OPTIONS</th>
+                            </tr>
+                            <tr>
+                                <td class="td-no">1</td> <td>Travesy Media</td> <td class="td-email">travesy@gmail.com</td> <td>Accept</td> <td>Delete</td>
+                            </tr> 
+                            <tr>
+                                <td class="td-no">2</td> <td>James Smith</td> <td class="td-email">smith@james.com</td> <td>Accept</td> <td>Delete</td>
+                            </tr> 
+                            <tr>
+                                <td class="td-no">3</td> <td>John Peter</td> <td class="td-email">john@gmail.com</td> <td>Accept</td> <td>Delete</td>
+                            </tr> 
+                            <tr>
+                                <td class="td-no">4</td> <td>Travesy Media</td> <td class="td-email">travesy@gmail.com</td> <td>Accept</td> <td>Delete</td>
+                            </tr> 
+                            <tr>
+                                <td class="td-no">2</td> <td>James Smith</td> <td class="td-email">smith@james.com</td> <td>Accept</td> <td>Delete</td>
+                            </tr> 
+                        </table>
                     </div>
                 </div>
                 <div class="login-signup-message">
