--- a/blogs-management.html
+++ b/blogs-management.html
@@ -25,7 +25,7 @@
         </header>
         <section>
             <div class="content-title">
-                <h2><span class="orangered">My</span> <span class="dark-orange">Blogs</span></h2>
+                <h2><span class="orangered">Manage</span> <span class="dark-orange">Blogs</span></h2>
             </div>
             <div class="blogs-content">
                 <div class="blogs-holder">
