--- a/login-admin.html
+++ b/login-admin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Page</title>
+    <title>Login Page</title>
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -17,7 +17,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li class="current"><a href="contact.html">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                     <li><a href="blogs.html">Blogs</a></li>         
                     <!-- <li><a href="login.html">Account</a></li>          -->
                 </ul>
@@ -25,34 +25,33 @@
         </header>
         <section>
                 <div class="content-title">
-                    <h2><span class="orangered">Contact</span> <span class="dark-orange">Me</span></h2>
+                    <h2><span class="orangered">Admin</span> <span class="dark-orange">Login</span></h2>
                 </div>
-                <div class="contact-content">
-                    <div class="contact-holder">
-                        <div class="contact-text">
-                            <p>Send Your Thoughts To <span class="orangered">Blog Posts</span></p>
+                <div class="login-content">
+                    <div class="login-holder">
+                        <div class="login-text">
+                            <p>Login <br>As <br> Admin <br> To have <br> <span class="orangered">Privelleges</span></p>
                         </div>
-                        <div class="contact-form">
-                            <form action="blogs.html">
+                        <div class="login-form">
+                            <form action="admin.html">
                                 <div>
-                                    <label for="name">Name:</label><br>
-                                    <input id="contact-name" type="text" name="name" required><br>
+                                    <label for="email">Email</label><br>
+                                    <input id="login-email" type="text" name="email" required><br>
                                 </div>
                                 <div>
-                                    <label for="email">Email:</label><br>
-                                    <input id="contact-email" type="text" name="email" required><br>
+                                    <label for="name">Password</label><br>
+                                    <input id="login-name" type="password" name="name" required><br>
                                 </div>
                                 <div>
-                                    <label for="message">Message:</label><br>
-                                    <textarea id="contact-message" name="message" cols="20" rows="4" required></textarea><br><br>
+                                    <input id="btn" type="submit" value="Login"></form>
                                 </div>
-                                <div>
-                                    <input id="btn" type="submit" value="Send"></form>
+                                <div class="login-admin-user">
+                                    <a href="login.html">Login As User</a>
                                 </div>
                         </div>
                     </div>
                     <div class="login-signup-message">
-                        <p>Please <span><a href="login.html">login</a></span> if you have an account</p>
+                        <p>Please <span><a href="signup.html">signup</a></span> if you don't have an account</p>
                     </div>
                 </div>
         </section>
