--- a/signup.html
+++ b/signup.html
@@ -15,56 +15,55 @@
             </div>
             <div class="nav-menu">
                 <ul>
-                                <li><a href="index.html">Home</a></li>
-                                <li><a href="about.html">About</a></li>
-                                <li><a href="contact.html">Contact</a></li>
-                                <li><a href="blogs.html">Blogs</a></li>         
-                                <!-- <li><a href="login.html">Account</a></li>          -->
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="blogs.html">Blogs</a></li>         
+                    <!-- <li><a href="login.html">Account</a></li>          -->
                 </ul>
             </div>
         </header>
         <section>
-            <div class="content-wrapper">
                 <div class="content-title">
                     <h2><span class="orangered">Signup</span> <span class="dark-orange"></span></h2>
                 </div>
                 <div class="signup-content">
                     <div class="signup-holder">
                         <div class="signup-text">
-                            <p>Signup <br>To <br> Build <br> Your <br> <span class="orangered">Blog Posts</span></p>
+                            <p>Signup To Build Your <span class="orangered">Blog Posts</span></p>
                         </div>
                         <div class="signup-form">
-                            <form action="">
+                            <form action="admin2.html">
                                 <div>
                                     <label for="username">Username:</label><br>
-                                    <input id="signup-username" type="text" name="username"><br>
+                                    <input id="signup-username" type="text" name="username" required><br>
                                 </div>
                                 <div>
                                     <label for="email">Email:</label><br>
-                                    <input id="signup-email" type="text" name="email"><br>
+                                    <input id="signup-email" type="text" name="email" required><br>
                                 </div>
                                 <div>
                                     <label for="name">Password:</label><br>
-                                    <input id="signup-name" type="password" name="name"><br>
+                                    <input id="signup-name" type="password" name="name" required><br>
                                 </div>
                                 <div>
                                     <label for="name">Confirm Password:</label><br>
-                                    <input id="signup-conform" type="password" name="confirm-password"><br>
+                                    <input id="signup-conform" type="password" name="confirm-password" required><br>
                                 </div>
                                 <div>
-                                    <input id="btn" type="submit" value="Signup"></form>
+                                    <input id="btn" type="submit" value="Signup">
                                 </div>
+                            </form>
                         </div>
+                        </div>
+                        <div class="login-signup-message">
+                            <p>Please <span><a href="login.html">login</a></span> if you have an account</p>
                         </div>
                     </div>
-                </div>
-                <div class="login-signup-message">
-                    <p>Please <span><a href="login.html">login</a></span> if you have an account</p>
-                </div>
         </section>
         <footer>
-            <div class="copy-right">
-                <p>Sam Web Design, Copy-right &copy;2020</p>
+                <div class="copyright">
+                    <p>Sam Web Design, Copy-right &copy;2020</p>
             </div>
         </footer>
     </div>
