--- a/blog3.html
+++ b/blog3.html
@@ -25,14 +25,14 @@
         </header>
         <section>
             <div class="content-title">
-                <h2><span class="orangered">Rwanda</span> <span class="dark-orange">Military Stories</span></h2>
+                <h2><span class="orangered">Software</span> <span class="dark-orange">Development</span></h2>
             </div>
             <div class="blogs-content">
                 <div class="blogs-holder">
                     <div class="blog">
                         <a href="blog1.html">
                             <div class="blog1-box">
-                                <img class="blog-image" src="assets/images/blog1.svg" alt="blog1">
+                                <img class="blog-image" src="assets/images/blog3.svg" alt="blog1">
                             </div>
                             <p><span class="blog-time">June 20, 2002 08:07 GMT+00200 by</span> <span class="blog-author">Adrien McArthur</span></p>
                             <p class="blog-paragraph">
