--- a/blogs-management.html
+++ b/blogs-management.html
@@ -29,41 +29,40 @@
             </div>
             <div class="blogs-content">
                 <div class="blogs-holder">
-                    <div class="blogs-row">
-                            <div class="blog">
-                                <img class="blog-img" src="assets/images/blog1.svg" alt="blog1">
-                                <p><a href="blog1.html">Rwanda Military Stories</a></p>
-                            </div>
-                            <div class="blog">
-                                <img class="blog-img" src="assets/images/blog2.svg" alt="blog2">
-                                <p><a href="blog2.html">Portifolio Website</a></p>
-                            </div>
-                            <div class="blog">
-                                <img class="blog-img" src="assets/images/blog3.svg" alt="blog3">
-                                <p><a href="">Softaware Development</a></p>
-                            </div>
-                            <div class="blog">
-                                <img class="blog-img" src="assets/images/blog4.svg" alt="blog4">
-                                <p><a href="">Mechanic Tools</a></p>
-                            </div>
-                            <div class="blog">
-                                <img class="blog-img" src="assets/images/blog5.svg" alt="blog5">
-                                <p><a href="">Categories of Driving Licence</a></p>
-                            </div>
-                            <div class="blog">
-                                <img class="blog-img" src="assets/images/blog6.svg" alt="blog6">
-                                <p><a href="">Git Version Control</a></p>
-                            </div>
-                    </div>
-                </div>
-                <div class="login-signup-message">
+                    <input class="blog-create" type="submit" value="+ Create A Blog">
+                    <input class="blog-create" type="submit" value="+ Edit A Blog">    
+                </div><div class="login-signup-message">
                     <p>Please <span><a href="login.html">login</a></span> to your account</p>
                 </div>
             </div>
         </section>
         <footer>
+            <div class="footer-row1">
+                <div class="about-us">
+                    <p class="footer-orangered">About Us</p>
+                    <p>Mockup Design</p>
+                    <p>Frontend & Backend Services</p>
+                    <p>Database Management</p>
+                </div>
+                <div class="follow-us">
+                    <p class="footer-orangered">Follow Us</p>
+                    <div class="social-media">
+                        <div><a target="_blank" href="https://www.linkedin.com/in/nshumbushijwenayo-samuel-726170112/"><img class="media" src="assets/images/Linkedin.svg" alt="linkedin"></a></div>
+                        <div><a target="_blank" href="https://github.com/SamuelSabasNayo/"><img class="media" src="assets/images/Github.svg" alt="github"></a></div>
+                        <div><a target="_blank" href="https://twitter.com/samuel_nayo"><img class="media" src="assets/images/Twitter.svg" alt="twitter"></a></div>
+                        <div><a target="_blank" href="https://web.facebook.com/samuelsabas.nshumbushijwenayo.3/"><img class="media" src="assets/images/Facebook.svg" alt="facebook"></a></div>
+                    </div>
+                </div>
+                <div class="contact-us">
+                    <p class="footer-orangered">Contact Us</p>
+                    <p>Email: nshusamuel1@gmail.com</p>
+                    <p>Phone: (+250) 787814449</p>
+                    <p>Kigali, Rwanda</p>
+                    <p>KG 03 RD, Kigali</p>
+                </div>
+            </div>
             <div class="copy-right">
-                <p>Sam Web Design, Copy-right &copy;2020</p>
+                <p>&copy; 2020 | Sam Web Design | All Right Reserved.</p>
             </div>
         </footer>
     </div>
